# midikit

./: Makefile  README.md  pyproject.toml
midikit/music/: pitch_class.py  real_time.py  tempo.py
midikit/stats/: iteration.py  midi_file_info.py  stats.py
test/test_music/: test_pitch_class.py
test/test_stats/: test_iteration.py  test_stats.py
