[tool.poetry]
name = "midikit"
version = "0.1.0"
description = ""
authors = ["Jeffrey Keene <thealtered7@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
rtmidi = "^2.3.4"
mido = "^1.2.10"
pytest = "^6.2.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
